Fixed visible-xs

--- a/hw2/css/styles.css
+++ b/hw2/css/styles.css
@@ -51,3 +51,6 @@ div.header-title h1 {
     color: black;
     margin-top: 10px;
 }
+button {
+    float: right;
+}
